[gd_scene load_steps=2 format=3 uid="uid://dlqm4hx8fka2n"]

[ext_resource type="Script" path="res://scenes/ui/shops/screens/placement_mode.gd" id="1_placement"]

[node name="PlacementMode" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_placement")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="HeaderPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HeaderContent" type="VBoxContainer" parent="VBoxContainer/HeaderPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HeaderPanel/HeaderContent"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="HBox" type="HBoxContainer" parent="VBoxContainer/HeaderPanel/HeaderContent/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="CurrentItemLabel" type="Label" parent="VBoxContainer/HeaderPanel/HeaderContent/MarginContainer/HBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "PLACING: Healing Herb"

[node name="RemainingLabel" type="Label" parent="VBoxContainer/HeaderPanel/HeaderContent/MarginContainer/HBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "6 remaining"

[node name="Spacer" type="Control" parent="VBoxContainer/HeaderPanel/HeaderContent/MarginContainer/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GoldLabel" type="Label" parent="VBoxContainer/HeaderPanel/HeaderContent/MarginContainer/HBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.8, 0.8, 0.2, 1)
text = "GOLD: 100G"

[node name="CostPerLabel" type="Label" parent="VBoxContainer/HeaderPanel/HeaderContent/MarginContainer/HBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)
text = "-10G per placement"

[node name="InstructionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Click a character to place ONE item. Click Caravan to place ALL remaining."
horizontal_alignment = 1

[node name="CharacterGrid" type="GridContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 4
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="CaravanButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
focus_mode = 2
theme_override_font_sizes/font_size = 16
text = "STORE ALL IN CARAVAN
6 items â†’ -60G"

[node name="CancelButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
focus_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)
text = "CANCEL ORDER"
